# deepin-anything

./: .clog.toml  .gitignore  .gitignore.swp  .project.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  LICENSE  Makefile  README.md  README.zh_CN.md  REUSE.toml
examples/anything-server/: CMakeLists.txt
examples/anything-server/src/: main.cpp
examples/deepin-anything-monitor/: .gitignore  CMakeLists.txt  deepin-anything-monitor.desktop  template.desktop  wizard.json
examples/deepin-anything-monitor/debian/: changelog  control  copyright  rules
examples/deepin-anything-monitor/src/: CMakeLists.txt
examples/deepin-anything-monitor/src/main/: CMakeLists.txt  main.cpp
examples/deepin-anything-monitor/src/maincomponentplugin/: CMakeLists.txt  blockdeviceitem.cpp  blockdeviceitem.h  blockdevicemodel.cpp  blockdevicemodel.h  dagenlclient.cpp  dagenlclient.h  main.qml  main_en.ts  main_zh.ts  maincomponent.qrc  maincomponentplugin.cpp  maincomponentplugin.h  mountinfo.cpp  mountinfo.h  test.cpp  vfs_event.cpp  vfs_event.h  vfs_genl.h  vfsevent.cpp  vfsevent.h  vfseventmodel.cpp  vfseventmodel.h  vfsgenl.h
examples/deepin-anything-monitor/src/preloadplugin/: CMakeLists.txt  Preload.qml  preload.qrc  preloadplugin.cpp  preloadplugin.h
src/: CMakeLists.txt  Makefile
src/cli/: CMakeLists.txt  Makefile
src/cli/inc/: console_test.h
src/cli/src/: console_test.c  main.c  stats.c
src/configs/dbus/: AnythingAdaptor.cpp  AnythingAdaptor.h
src/daemon/: CMakeLists.txt  deepin-anything-daemon.service
src/daemon/include/: anything.hpp
src/daemon/include/analyzers/: AnythingAnalyzer.h  AnythingFilter.h  chineseanalyzer.h  chinesetokenizer.h
src/daemon/include/common/: fs_event.h
src/daemon/include/core/: base_event_handler.h  config.h  default_event_handler.h  disk_scanner.h  file_index_manager.h  mount_info.h  pinyin_processor.h
src/daemon/include/utils/: genl_parser.hpp  tools.h
src/daemon/src/: main.cpp
src/daemon/src/analyzers/: AnythingAnalyzer.cpp  AnythingFilter.cpp  AnythingTokenizer.cpp  chineseanalyzer.cpp
src/daemon/src/core/: base_event_handler.cpp  config.cpp  default_event_handler.cpp  event_listenser.cpp  file_index_manager.cpp  mount_info.c  mount_manager.cpp  pinyin_processor.cpp
src/daemon/src/utils/: string_helper.cpp  tools.c
src/dict/: user.dict.utf8
src/kernelmod/: .Module.symvers.cmd  .modules.order.cmd  .vfs_monitor.mod.cmd  CMakeLists.txt  Makefile  arg_extractor.c  arg_extractor.h  deepin-anything-dkms.dkms.in  dkms.conf.in  event.c  event.h  event_merge.c  event_merge.h  module.c  vfs_change_consts.h  vfs_fsnotify.c  vfs_fsnotify.h  vfs_genl.c  vfs_genl.h  vfs_kgenl.h  vfs_kretprobes.c  vfs_log.h  vfs_sysfs.c  vfs_trace_process.c  vfs_trace_process.h
src/logger/: CMakeLists.txt  README.md  config.c  config.h  datatype.c  datatype.h  dconfig.c  dconfig.h  deepin-anything-logger.service  event_listener.c  event_listener.h  event_logger.c  event_logger.h  file_log.c  file_log.h  log.c  log.h  main.c
src/logger/tests/: CMakeLists.txt  run_tests.sh  test_event_logger.c  test_file_log.c
src/searcher/: CMakeLists.txt  main.cpp  searcher.cpp  searcher.h
src/server/: CMakeLists copy.txt  CMakeLists.txt  deepin-anything-backend.pro  deepin-anything-daemon.pc.in  deepin-anything-daemon.service  deepin-anything-server  deepin-anything-server-config.cmake.in  deepin-anything-server.pc.in  deepin-anything-server.service  main.c
src/server/app/: CMakeLists.txt  deepin-anything-server.service  main.cpp
src/server/backend/: CMakeLists.txt  anything_fwd.hpp  anythingbackend.cpp  anythingbackend.h  anythingexport.h  backend.pro  debug_tools.hpp  deepin-anything-server-lib.pc.in  default_event_handler.cpp  default_event_handler.h  disk_scanner.cpp  disk_scanner.h  encode.hpp  enum_helper.h  event_listenser.cpp  event_listenser.h  eventsource.cpp  eventsource_genl.cpp  eventsource_genl.h  file_index_manager.cpp  file_index_manager.h  file_record.hpp  fs_event.h  genl_parser.hpp  jieba_analyzer.cpp  jieba_analyzer.h  jieba_tokenizer.cpp  jieba_tokenizer.h  lft_manager.cpp  lft_manager.h  log.h  mount_manager.cpp  mount_manager.h  partition.cpp  partition.h  print_helper.h  server.cpp  server.h  service_manager.cpp  service_manager.h  (+6 more)
src/server/backend/dbusservice/: com.deepin.anything.conf  com.deepin.anything.policy
src/server/backend/lib/: dasdefine.h  dasinterface.h  dasplugin.cpp  dasplugin.h  daspluginloader.cpp  daspluginloader.h  eventadaptor.cpp  eventadaptor.h  lftdisktool.cpp  lftdisktool.h  lftmanager.cpp  lftmanager.h  logdefine.h  logsaver.cpp  logsaver.h  mountcacher.cpp  mountcacher.h
src/server/include/: anything.hpp
src/server/include/analyzers/: AnythingAnalyzer.h  AnythingTokenizer.h
src/server/include/anything/: anything.hpp
src/server/include/anything/common/: file_record.hpp  fs_event.h
src/server/include/anything/core/: base_event_handler.h  default_event_handler.h  disk_scanner.h  event_listenser.h  file_index_manager.h  mount_manager.h
src/server/include/anything/utils/: enum_helper.h  genl_parser.hpp  log.h  print_helper.h  service_manager.h  (+2 more)
src/server/include/common/: anything_fwd.hpp  file_record.h  file_record.hpp  fs_event.h  vfs_genl.h
src/server/include/core/: base_event_handler.h  config.h  default_event_handler.h  disk_scanner.h  event_listenser.h  file_index_manager.h  mount_manager.h  pinyin_processor.h  thread_pool.h
src/server/include/utils/: config.h  enum_helper.h  genl_parser.hpp  log.h  print_helper.h  signal_handler.h  string_helper.h  sys.h  tools.h
src/server/src/: main.cpp
src/server/src/analyzers/: AnythingAnalyzer.cpp  AnythingFilter.cpp  AnythingTokenizer.cpp  chineseanalyzer.cpp  chinesetokenizer.cpp
src/server/src/common/: file_record.cpp
src/server/src/core/: base_event_handler.cpp  config.cpp  default_event_handler.cpp  disk_scanner.cpp  event_listenser.cpp  file_index_manager.cpp  mount_manager.cpp  pinyin_processor.cpp  thread_pool.cpp
src/server/src/utils/: service_manager.cpp  signal_handler.cpp  string_helper.cpp  sys.cpp  tools.c
src/tools/: calc_index.py
(+155 files in other folders)
